alignment fix

--- a/fat/src/app/search-card/search-card.component.scss
+++ b/fat/src/app/search-card/search-card.component.scss
@@ -78,7 +78,7 @@ img[md-card-image],
       height: auto;
       width: 100%;
       align-items: center;
-      justify-content: space-between;
+      justify-content: flex-start;
       flex-direction: row !important;
 
       // .card-image-wrapper {
